TAG: littriageload-6-0-12-10
DATE: 06/20/2018
STAFF: lec
CHANGES: 
1) TR12844/ignore duplicates in processPDFs()
2) TR12881/add vol, issue, pgs to "None" -> null

TAG: littriageload-6-0-12-9
TAG: littriageload-6-0-12-8
TAG: littriageload-6-0-12-7
TAG: littriageload-6-0-12-6
DATE: 06/05/2018, 06/06/2018
STAFF: lec
CHANGES: TR12881
add vol, issue, pgs to "None" -> null

TAG: littriageload-6-0-12-5
TAG: littriageload-6-0-12-4
DATE: 05/18/2018
STAFF: lec
CHANGES: TR12829/Populate DOI for peer reviewed articles
add findNLMrefresh.sh script

TAG: littriageload-6-0-12-3
TAG: littriageload-6-0-12-2
DATE: 04/03/2018, 05/01/2018
STAFF: lec
CHANGES: TR12829/Populate DOI for peer reviewed articles

TAG: littriageload-6-0-12-1
DATE: 03/07/2018
STAFF: lec
CHANGES:
changed bib_workflow_status_serial to bib_workflow_status_seq

TAG: littriageload-6-0-11-35
DATE: 01/18/2018
STAFF: lec
CHANGES:
1)TR12747/publication type : turn on with fix

TAG: littriageload-6-0-11-34
DATE: 01/18/2018
STAFF: lec
CHANGES:
1)TR12747/publication type : turn off & fix bug

TAG: littriageload-6-0-11-33
DATE: 12/27/2017
STAFF: lec
CHANGES:
1)TR12747/publication type
2)TR12756/duplicate log

TAG: littriageload-6-0-11-32
DATE: 12/18/2017
STAFF: lec
CHANGES:
1)TR12708/add Lit Triage Supplemental Journal logic

TAG: littriageload-6-0-11-31
TAG: littriageload-6-0-11-30
TAG: littriageload-6-0-11-29
TAG: littriageload-6-0-11-28
TAG: littriageload-6-0-11-27
TAG: littriageload-6-0-11-26
TAG: littriageload-6-0-11-25
DATE: 12/11/2017, 12/12/2017, 12/132017
STAFF: lec
CHANGES:
TR12705/add NLM refresh pipeline
also, pipes in 'title' need to be escaped

TAG: littriageload-6-0-11-24
TAG: littriageload-6-0-11-23
DATE: 12/06/2017
STAFF: lec
CHANGES:
update bib_workflow_status_serial after bcp

TAG: littriageload-6-0-11-22
TAG: littriageload-6-0-11-21
TAG: littriageload-6-0-11-20
TAG: littriageload-6-0-11-19
DATE: 11/30/2017, 12/04/2017
STAFF: lec
CHANGES:
added archiving of 'input' directory

TAG: littriageload-6-0-11-18