@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-12-11
+DATE: 07/30/2018
+STAFF: lec
+CHANGES: 
+1) TR12844/check for duplicate PDF names in input folder
+
 TAG: littriageload-6-0-12-10
 DATE: 06/20/2018
 STAFF: lec
